Install platform plugins in a directory with no dots in file name

It seems like codesign doesn't like if a platform plugin includes
multiple dots in its file path.

BUG: 425652