src/config-kwindowsystem.h.cmake
@@ -10,4 +10,4 @@
 #cmakedefine01 KWINDOWSYSTEM_HAVE_XRENDER
 
 /* Path to xcb plugin */
-#define XCB_PLUGIN_PATH "${KDE_INSTALL_FULL_PLUGINDIR}/kf5/org.kde.kwindowsystem.platforms/KF5WindowSystemX11Plugin.so"
+#define XCB_PLUGIN_PATH "${KDE_INSTALL_FULL_PLUGINDIR}/kf5/kwindowsystem/KF5WindowSystemX11Plugin.so"
